--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat');
 
+html {
+    overflow: hidden;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
 
@@ -10,7 +14,7 @@ body {
     margin: 0 auto;
 }
 
-img {
+#img {
     animation: 3s parralaxHuge;
 
     user-select: none;
@@ -33,7 +37,7 @@ img {
     text-align: center;
 }
 
-h1 {
+#mainH1 {
     animation: 3s parralaxLong;
 
     font-size: 3rem;
@@ -50,12 +54,17 @@ p {
 }
 
 #purchaseIntended {
+    animation: 3s fadeIn;
+
     border-radius: 0.25rem;
     padding: 0.45rem 0.7rem;
     background: white;
     border: 2px solid #1E82E9;
 
     text-align: center;
+    
+    position: absolute;
+    bottom: 2rem;
 }
 
 a {
@@ -66,41 +75,67 @@ a {
 
 #wrapper {
     width: 100vw;
-    height: 100vh;
-    background: red;
+    height: 80vh;
+    background: white;
 
     display: flex;
 }
 
 #leftColumn {
-    background: blue;
+    background: white;
     display: inline-block;
     width: 33vw;
-    height: 100vh;
+    height: 90vh;
 
-    
     margin: 0 auto;
-    padding: 0;
+    padding: 1rem 2rem;
+
+    border: 1px solid black;
 }
 
 #midColumn {
-    background: rgb(0, 255, 81);
+    background: white;
     display: inline-block;
     width: 33vw;
-    height: 100vh;
+    height: 90vh;
 
     margin: 0 auto;
-    padding: 0;
+    padding: 1rem 2rem;
+
+    border: 1px solid black;
 }
 
 #rightColumn {
-    background: rgb(255, 0, 234);
+    background: white;
     display: inline-block;
     width: 33vw;
-    height: 100vh;
+    height: 90vh;
 
     margin: 0 auto;
-    padding: 0;
+    padding: 1rem 2rem;
+
+    border: 1px solid black;
+}
+
+#navRow {
+    width: 100vw;
+    height: 10vh;
+
+    display: inline-block;
+    bottom: 0;
+}
+
+#navRowH1 {
+    position: relative;
+    top: 5px;
+    left: 60px;
+}
+
+#navRowIMG {
+    position: relative;
+    top: 10px;
+    left: 30px;
+    float: left;
 }
 
 #aUnderline {
@@ -109,6 +144,15 @@ a {
 
 bold {
     font-weight: 900;
+}
+
+@keyframes fadeIn{
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 @keyframes parralaxHuge {
